WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256182
REGRESSION (
262853@main
): Pan gestures that scroll should not dispatch synthetic clicks
https://bugs.webkit.org/show_bug.cgi?id=256182
Summary
REGRESSION (262853@main): Pan gestures that scroll should not dispatch synthe...
Wenson Hsieh
Reported
2023-05-01 15:18:37 PDT
rdar://108553019
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-05-01 16:19:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13342
EWS
Comment 2
2023-05-02 15:04:33 PDT
Committed
263610@main
(703dabd84f9c): <
https://commits.webkit.org/263610@main
> Reviewed commits have been landed. Closing PR #13342 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug